fixes the spacing around hero-quote on small screens
reduces font-size of hero-quote on large screens

--- a/scss/_component.hero-quote.scss
+++ b/scss/_component.hero-quote.scss
@@ -4,16 +4,14 @@
 
 .hero-quote__inner {
   @include span-columns(12);
-  padding: $space-x $space-y;
+  padding: ($space-x * 2) $space-y;
   font-weight: $font-weight-bold;
   color: $color-text;
 
   @include bp(medium) {
     @include span-columns(9);
 
-    padding-top: ($space-x * 2);
     padding-right: ($space-y * 2);
-    padding-bottom: ($space-x * 2);
     padding-left: ($space-y * 2);
   }
 
@@ -38,10 +36,6 @@
 
   @include bp(medium) {
     font-size: modular-scale(2);
-  }
-
-  @include bp(large) {
-    font-size: modular-scale(3);
   }
 }
 
